--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -203,6 +203,7 @@ allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
+allow 177.149.137.68;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.170.23;
@@ -219,8 +220,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.250.214;
-allow 179.250.245.181;
+allow 178.30.194.204;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -885,7 +885,6 @@ allow 2.58.56.233;
 allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
-allow 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1309,6 +1308,7 @@ allow 2a0d:bbc7:0:1::394;
 allow 2a0d:bbc7:0:1::3bd;
 allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
+allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1406,7 +1406,6 @@ allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.220.75.237;
-allow 3.14.249.60;
 allow 35.0.127.52;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1482,7 +1481,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1636,6 +1634,7 @@ allow 91.92.109.43;
 allow 92.223.2.52;
 allow 92.243.24.163;
 allow 92.246.138.145;
+allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.228.125;
