--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -116,7 +116,6 @@ deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
-deny 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -539,6 +538,7 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
 deny 2a0e:4005:1002:ffff:185:40:4:127;
