--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -203,6 +203,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.137.68;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
@@ -219,8 +220,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 178.30.250.214;
-set_real_ip_from 179.250.245.181;
+set_real_ip_from 178.30.194.204;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -885,7 +885,6 @@ set_real_ip_from 2.58.56.233;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
-set_real_ip_from 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -1309,6 +1308,7 @@ set_real_ip_from 2a0d:bbc7:0:1::394;
 set_real_ip_from 2a0d:bbc7:0:1::3bd;
 set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
+set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1406,7 +1406,6 @@ set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.220.75.237;
-set_real_ip_from 3.14.249.60;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
@@ -1482,7 +1481,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1636,6 +1634,7 @@ set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.223.2.52;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
+set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.95.228.125;
