--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -116,7 +116,6 @@ set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2600:1f13:e60:ea00:23a1:d09e:4d28:40c8;
-set_real_ip_from 2600:1f16:14df:6d00:fa54:d82a:9008:bdff;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -539,6 +538,7 @@ set_real_ip_from 2a0d:bbc7:0:1::394;
 set_real_ip_from 2a0d:bbc7:0:1::3bd;
 set_real_ip_from 2a0d:bbc7:0:1::3cc;
 set_real_ip_from 2a0d:bbc7:0:1::3d5;
+set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
