--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -58,6 +58,7 @@ deny 107.189.13.91;
 deny 107.189.14.106;
 deny 107.189.14.4;
 deny 107.189.14.43;
+deny 107.189.16.243;
 deny 107.189.1.9;
 deny 107.189.2.108;
 deny 107.189.29.103;
@@ -131,6 +132,7 @@ deny 142.44.234.69;
 deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.118.73;
+deny 144.202.5.2;
 deny 146.19.143.47;
 deny 146.59.126.232;
 deny 146.59.231.4;
@@ -691,6 +693,7 @@ deny 199.195.251.78;
 deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
+deny 2001:19f0:1000:758c:5400:5ff:fe46:d7ed;
 deny 2001:1af8:4700:a114:6::1;
 deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
@@ -863,6 +866,7 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -924,6 +928,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
+deny 2602:fa59:5:c9::1;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
@@ -1359,7 +1364,6 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
@@ -1488,7 +1492,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
