--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,10 @@ allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
+allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
+allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -219,6 +223,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.30.194.204;
+allow 179.35.12.163;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -936,6 +941,7 @@ allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
@@ -1023,6 +1029,7 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
+allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1362,7 +1369,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1491,7 +1497,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1548,6 +1553,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
