--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
+allow 104.194.132.114;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -668,7 +669,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.161;
+allow 198.167.206.187;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -929,6 +930,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
+allow 2602:fa59:5:12b::1;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1676,7 +1678,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.187.143.31;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
