--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -125,6 +125,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:f9f3:0:2::319;
+deny 2602:fa59:5:12b::1;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
